# encrypted_communicator

./: .gitignore  Cargo.toml
src/: communicator.rs  lib.rs  secret.rs
src/communicator/: error.rs  mod.rs  processed_data.rs
src/communicator/error/: kind.rs
src/communicator/processed_data/: mod.rs
src/data/: mod.rs  version.rs
src/data/error/: kind.rs  mod.rs
src/data/operation/: mod.rs  operation_error.rs
src/data/operation/operation_error/: kind.rs
src/data/operation/response_error/: mod.rs
src/data/uid/: mod.rs
src/secret/: communication_key.rs  mod.rs  negotiation_key.rs
src/secret/aes/: mod.rs
src/secret/error/: error_kind.rs  mod.rs
src/secret/rsa/: key_size.rs  mod.rs
tests/: basic_usage.rs  multiple_connections_async.rs
tests/config/: tests_config.toml
