[package]
name = "encrypted_communicator"
version = "0.1.0"
authors = ["Igor Taranenko <igor.tar@yahoo.com>"]
publish = false
edition="2018"

[dependencies]
byteorder = "^1"
ipnetwork = "^0.12"
lazy_static = "^1"
log = "^0.4"
openssl = "^0.10"
pnet = "^0.25"
pnet_datalink = "^0.25"
rand = "^0.4"
regex = "^0.2"
rust-crypto = "^0.2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
thread-id = "^3"

[dev-dependencies]
config = "^0.10"
